# prosic

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FindGMP.cmake  Makefile  README.md  cmake_install.cmake  config.h  config.h.in  install_manifest.txt  setup.py
back-ups/public-code-recomb/: Alignments.py  Indel.py  README.md  SMLikelihoodMaximizer.py  call_somatic_mutations.py  temp_output.vcf
back-ups/v1_old-code/: SomaticMutationCaller.py  VAFEstimator.py
back-ups/v2_code/: SomaticMutationCaller.py  VAFEstimator.py  plot_cvaf_mles.py  testSomaticMutationCaller.py  uncertainty_off_1000.txt
back-ups/v3_code-alex/: Alignments.py  Indel.py  README.md  ResultsInstance.py  SMLikelihoodMaximizer.py  VAFLikelihoodMaximizer.py  plot_genotyping_results.py  plot_vaf_estimates_cancer_bams.py  sort_index_bam.py  ternary_classification.py  test_somatic_mutation_caller.py
back-ups/v4_bayesian/: BAMProcessor.py  ResultsInstance.py  SMLikelihoodMaximizer.py  VAFLikelihoodMaximizer.py  call_somatic_mutations.py  determine_recall_precision_delly.py  determine_recall_precision_truth.py  generate_results_for_recomb.py   preliminary_results.txt  (+6 more)
dream-workflow/: config.yaml
include/: smc_likelihood.h
prosic/: Alignments.py  BAMProcessor.py  BWABAMProcessor.py  ContingencyTable.py  DefaultBAMProcessor.py  Indel.py  LaserBAMProcessor.py  TernaryClassification.py
python/: BAMProcessor.py  Indel.py
src/: Makefile  cmake_install.cmake  smc_input.c  smc_input.h  smc_likelihood.c  smc_likelihood.h  smc_main.c
workflow/: config.yaml  environment.yml  requirements.txt
(+2440 files in other folders)
